# sftppp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: compile.txt  main.cpp
single_header/: sftpclientpp.h
src/: sftpattributes.h  sftpclient.cpp  sftpclient.h  sftperror.cpp  sftperror.h
